--- a/RottenOrNot.Web/Web.config
+++ b/RottenOrNot.Web/Web.config
@@ -67,6 +67,6 @@
 		</compilers>
 	</system.codedom>
 	<connectionStrings>
-		<add name="Model1" connectionString="data source=.;initial catalog=ExamProjectDatabase;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+		<add name="RottenOrNot" connectionString="data source=.;initial catalog=RottenOrNotDatabase;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
 	</connectionStrings>
 </configuration>
