--- a/RottenOrNot.Data/App.config
+++ b/RottenOrNot.Data/App.config
@@ -15,6 +15,6 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <add name="Model1" connectionString="data source=.;initial catalog=ExamProjectDatabase;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+    <add name="RottenOrNot" connectionString="data source=.;initial catalog=RottenOrNotDatabase;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
   </connectionStrings>
 </configuration>
